--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "storybook": "start-storybook",
+    "develop": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,12 +13,17 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@storybook/vue": "^5.3.10",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-vue": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
