--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "tachyons": "^4.11.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -23,6 +24,9 @@
     "babel-preset-vue": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.1",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.10"
   },
