--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "tachyons": "^4.11.1",
+    "v-tooltip": "^2.0.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
