--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.4.4",
     "tachyons": "^4.11.1",
     "v-tooltip": "^2.0.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-mq": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
