--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tachyons": "^4.11.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.10",
+    "vue-agile": "^1.0.11",
     "vue-mq": "^1.0.1"
   },
   "devDependencies": {
