--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "lodash": "^4.17.15",
     "tachyons": "^4.11.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.10",
