--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
-    "lodash": "^4.17.19",
-    "tachyons": "^4.11.1",
-    "v-tooltip": "^2.0.3",
-    "vue": "^2.6.10",
-    "vue-agile": "^1.0.11",
+    "core-js": "^3.8.2",
+    "lodash": "^4.17.20",
+    "style-loader": "^2.0.0",
+    "tachyons": "^4.12.0",
+    "v-tooltip": "^2.1.2",
+    "vue": "^2.6.12",
+    "vue-agile": "^1.1.3",
     "vue-mq": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@storybook/storybook-deployer": "^2.8.3",
-    "@storybook/vue": "^5.3.10",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.12.10",
+    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/vue": "^6.1.11",
+    "@vue/cli-plugin-babel": "^4.5.10",
+    "@vue/cli-plugin-eslint": "^4.5.10",
+    "@vue/cli-service": "^4.5.10",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "babel-preset-vue": "^2.0.2",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.1",
-    "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
-    "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.10"
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.4.1",
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
